@@ -1,7 +1,7 @@
 /*
  * exempi - xmp.h
  *
- * Copyright (C) 2007-2015 Hubert Figuiere
+ * Copyright (C) 2007-2016 Hubert Figuiere
  * Copyright 2002-2007 Adobe Systems Incorporated
  * All rights reserved.
  *
@@ -658,6 +658,11 @@ void xmp_string_free(XmpStringPtr s);
  * belong to the object.
  */
 const char *xmp_string_cstr(XmpStringPtr s);
+/** Get the string length from the XmpStringPtr
+ * @param s the string object
+ * @return the string length. The unerlying implementation has it.
+ */
+size_t xmp_string_len(XmpStringPtr s);
 
 /** Create a new iterator.
  * @param xmp the packet
