@@ -13,7 +13,8 @@
     - Better Postscript support.
     - Lot of bug fixes.
 - New API: added XMP_OPEN_OPTIMIZEFILELAYOUT for new SDK.
-- Now require C++11.
+- New API: added xmp_string_len() to get the length of the XmpString.
+- Now require C++11 to compile.
 
 2.3.0
 
